@@ -1,3 +1,11 @@
+2011-11-23 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
+	* godmode/agentes/agent_conf_gis.php
+	godmode/agentes/agent_manager.php: Fixed 'Ignore GIS data' and
+	change labels.
+	
+	Fixes: #3437659
+
 2011-11-22 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
 	* images/skin/skin_default/include/styles/tip.css
